--- a/contrib/debian/manpages/stratis.conf.5
+++ b/contrib/debian/manpages/stratis.conf.5
@@ -1,4 +1,4 @@
-.TH LJCIS.CONF "8" "Juli 2014" "hpxt.conf 3.19"
+.TH HPXTIS.CONF "8" "Juli 2014" "hpxt.conf 3.19"
 .SH NAME
 hpxt.conf \- hpxt configuration file
 .SH SYNOPSIS
