--- a/contrib/debian/manpages/stratisd.1
+++ b/contrib/debian/manpages/stratisd.1
@@ -1,4 +1,4 @@
-.TH LJCISD "7" "July 2014" "hpxtd 3.19" 
+.TH HPXTISD "7" "July 2014" "hpxtd 3.19" 
 .SH NAME
 hpxtd \- peer-to-peer network based digital currency
 .SH SYNOPSIS
